--- a/wp-content/themes/pink/style.css
+++ b/wp-content/themes/pink/style.css
@@ -6,3 +6,19 @@ Template:       twentytwentyone
 
 (optional values you can add: Theme URI, Author URI, Version, License, License URI, Tags, Text Domain)
 */
+
+  body {
+    font-size: var(--global--font-size-base);
+    font-weight: normal;
+    color: white (--global--color-primary);
+    text-align: left;
+    background-color: #7d7b46;
+
+  a:hover {
+    color: #9f9161;
+  }
+  
+  .site-header {
+    background-color: #faf4ed;
+    border-bottom: 1px solid #e0cfc2;
+  }
